target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: d74c20b08582371491643f0d52ab3269be32f821
    app.quarkus.io/build-timestamp: 2021-10-05 - 09:46:59 +0000
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: webinar-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: d74c20b08582371491643f0d52ab3269be32f821
    app.quarkus.io/build-timestamp: 2021-10-05 - 09:46:59 +0000
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: webinar-demo
  name: webinar-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: webinar-demo
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: d74c20b08582371491643f0d52ab3269be32f821
        app.quarkus.io/build-timestamp: 2021-10-05 - 09:46:59 +0000
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: webinar-demo
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: -Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager
          image: user_opensh/webinar-demo:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: webinar-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
