target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5c5f7347bec5df87cda87f0d33eff5004938cf31
    app.quarkus.io/build-timestamp: 2021-10-06 - 09:08:20 +0000
  labels:
    app.kubernetes.io/name: quarkus-demo
    app.kubernetes.io/version: 1.0.0
    app.openshift.io/runtime: quarkus
  name: quarkus-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-demo
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5c5f7347bec5df87cda87f0d33eff5004938cf31
    app.quarkus.io/build-timestamp: 2021-10-06 - 09:08:20 +0000
  labels:
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: quarkus-demo
    app.openshift.io/runtime: quarkus
  name: quarkus-demo
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-demo
    app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 5c5f7347bec5df87cda87f0d33eff5004938cf31
        app.quarkus.io/build-timestamp: 2021-10-06 - 09:08:20 +0000
      labels:
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: quarkus-demo
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: -Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager
          image: user_opensh/quarkus-demo:1.0.0
          imagePullPolicy: IfNotPresent
          name: quarkus-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkus-demo
        from:
          kind: ImageStreamTag
          name: quarkus-demo:1.0.0
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5c5f7347bec5df87cda87f0d33eff5004938cf31
    app.quarkus.io/build-timestamp: 2021-10-06 - 09:08:20 +0000
  labels:
    app.kubernetes.io/name: quarkus-demo
    app.kubernetes.io/version: 1.0.0
    app.openshift.io/runtime: quarkus
  name: quarkus-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-demo
